# course-architect

./: .gitignore  Dockerfile  README.md  cmd.md
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: ci.yml  deploy-prod.yml  deploy-staging.yml
backend/: .env.example  .gitignore  README.md  courses.db  langgraph.db-shm  langgraph.db-wal  main.py  pyproject.toml  start.sh
backend/agents/: curriculum_planner.py  curriculum_review.py  preprocessor.py  validation.py
backend/api/: main.py
backend/api/dependencies/: auth.py
backend/api/routes/: courses.py  files.py
backend/api/schemas/: courses.py  files.py
backend/celery_app/: tasks.py  worker.py
backend/graph/: graph.py  state.py
backend/nodes/: curriculum_planner.py  curriculum_review.py  gap_enrichment.py  preprocessor.py  validation.py
backend/queue/: tasks.py  worker.py
backend/rag/: ingest.py  retrieval.py  store.py
backend/schemas/: curriculum.py  preprocessor.py  validation.py
backend/storage/: database.py  models.py  s3.py  s3vectors.py
backend/tests/test_agents/: test_curriculum_planner.py  test_curriculum_review.py  test_gap_enrichment.py  test_preprocessor.py
backend/tools/: curriculum_planner.py
backend/utils/: fetchers.py  logging.py  pipeline.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Icon.tsx  Markdown.tsx  NewCourseForm.tsx  PipelineTracker.tsx
frontend/src/components/course/: CourseOverview.tsx  CourseSidebar.tsx  QuizCard.tsx  SessionPanel.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: CoursePage.tsx  DashboardPage.tsx  LandingPage.tsx
frontend/src/types/: course.ts
infra/terraform/bootstrap/: main.tf
infra/terraform/envs/prod/: backend.tf  main.tf  outputs.tf
infra/terraform/envs/staging/: backend.tf  main.tf  variables.tf
infra/terraform/modules/alb/: main.tf  outputs.tf  (+1 more)
(+22 files in other folders)
