[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.12",
    "boto3>=1.42.91",
    "celery>=5.6.3",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.14",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.7",
    "langgraph-checkpoint-redis>=0.4.1",
    "pypdf>=6.10.2",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "redis>=7.4.0",
    "requests>=2.32",
    "sqlalchemy[asyncio]>=2.0.49",
    "tavily-python>=0.7.23",
    "uvicorn>=0.44.0",
    "youtube-transcript-api>=0.6.2",
]
